--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>code-interview-stride</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <meta name="description" content="Techifyhouse Project" />
+    <meta name="author" content="Techifyhouse" />
 
     <meta property="og:title" content="code-interview-stride" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:description" content="Techifyhouse Project" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
