see favicon icon

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>code-interview-stride</title>
     <meta name="description" content="Techifyhouse Project" />
     <meta name="author" content="Techifyhouse" />
-
+    <link rel="icon" href="../public/3.png" />
     <meta property="og:title" content="code-interview-stride" />
     <meta property="og:description" content="Techifyhouse Project" />
     <meta property="og:type" content="website" />
