--- a/index.html
+++ b/index.html
@@ -3,18 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>code-interview-stride</title>
+    <title>Datacareer MVP | Techifyhouse</title>
     <meta name="description" content="Techifyhouse Project" />
     <meta name="author" content="Techifyhouse" />
-    <link rel="icon" href="../public/3.png" />
-    <meta property="og:title" content="code-interview-stride" />
+    <link rel="icon" type="image/x-icon" href="../datacareer-mvp-th/public/favicon.ico">
+    <!-- <link rel="icon" href="../public/3.png" /> -->
+    <!-- <meta property="og:title" content="code-interview-stride" />
     <meta property="og:description" content="Techifyhouse Project" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" /> -->
   </head>
 
   <body>
