Update favicon link in index.html, remove old favicon file, and enhance Header component with cursor pointer for mobile menu button

--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <title>Datacareer MVP | Techifyhouse</title>
     <meta name="description" content="Techifyhouse Project" />
     <meta name="author" content="Techifyhouse" />
-    <link rel="icon" type="image/x-icon" href="../datacareer-mvp-th/public/favicon.ico">
-    <!-- <link rel="icon" href="../public/3.png" /> -->
+    <link rel="icon" type="image/x-icon" href="/favicon.png">
     <!-- <meta property="og:title" content="code-interview-stride" />
     <meta property="og:description" content="Techifyhouse Project" />
     <meta property="og:type" content="website" />
